--- a/client/src/components/views/design/customizer-ui/CustomizerUi.css
+++ b/client/src/components/views/design/customizer-ui/CustomizerUi.css
@@ -221,3 +221,9 @@
     background-color: var(--light-orange);
     color: var(--dark-orange);
 }
+
+@media screen and (max-width: 70em) {
+    .design__customizer {
+        overflow-y: initial;
+    }
+}
